tests/snapshots/render__welcome_120x40.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│FILES search outline links    ││                                                                                      │
│0 entries, scanning…          ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                       ██████  ███████ ██████   ██████   █████                        │
│                              ││                       ██   ██ ██      ██   ██ ██       ██   ██                       │
│                              ││                       ██████  █████   ██████  ██   ███ ███████                       │
│                              ││                       ██      ██      ██   ██ ██    ██ ██   ██                       │
│                              ││                       ██      ███████ ██   ██  ██████  ██   ██                       │
│                              ││                                                                                      │
│                              ││                                      perga 0.1.0                                     │
│                              ││                                                                                      │
│                              ││                                Ctrl+O   find a document                              │
│                              ││                                 Ctrl+B   toggle sidebar                              │
│                              ││                                     ?   all keybindings                              │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find  ? help
