tests/snapshots/render__welcome_40x10.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga
┌──────────────────┐───────────────────┐
│FILES search      │ #####             │
│outline links     │s the file tree    │
│0 entries, scannin│nd a document      │
│                  │de the sidebar     │
│                  │l keybindings      │
│                  │                   │
└──────────────────┘───────────────────┘
 READ
