tests/snapshots/render__welcome_80x24.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga
┌──────────────────────────────┐┌──────────────────────────────────────────────┐
│FILES search outline links    ││                                              │
│0 entries, scanning…          ││                                              │
│                              ││                                              │
│                              ││            █▀▀█ █▀▀ █▀▀█ █▀▀▀ █▀▀█           │
│                              ││            █▄▄█ █▀▀ █▄▄▀ █ ▀█ █▄▄█           │
│                              ││            █    ▀▀▀ ▀  ▀ ▀▀▀▀ ▀  ▀           │
│                              ││                                              │
│                              ││                  perga #####                 │
│                              ││                                              │
│                              ││             Tab   focus the file tree        │
│                              ││            Ctrl+O   find a document          │
│                              ││            Ctrl+B   hide the sidebar         │
│                              ││                 ?   all keybindings          │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 READ  Tab file tree  H/L history  f links  Ctrl+B hide sidebar  Ctrl+O switch
