tests/snapshots/render__welcome_tier_large.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                             ██████  ███████ ██████   ██████   █████                              │
│                             ██   ██ ██      ██   ██ ██       ██   ██                             │
│                             ██████  █████   ██████  ██   ███ ███████                             │
│                             ██      ██      ██   ██ ██    ██ ██   ██                             │
│                             ██      ███████ ██   ██  ██████  ██   ██                             │
│                                                                                                  │
│                                            perga #####                                           │
│                                                                                                  │
│                                      Ctrl+O   find a document                                    │
│                                       Ctrl+B   toggle sidebar                                    │
│                                           ?   all keybindings                                    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find  ? help
