tests/snapshots/render__welcome_tier_medium.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga
┌──────────────────────────────────────────────┐
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│            █▀▀█ █▀▀ █▀▀█ █▀▀▀ █▀▀█           │
│            █▄▄█ █▀▀ █▄▄▀ █ ▀█ █▄▄█           │
│            █    ▀▀▀ ▀  ▀ ▀▀▀▀ ▀  ▀           │
│                                              │
│                  perga #####                 │
│                                              │
│             Tab   focus the file tree        │
│            Ctrl+O   find a document          │
│            Ctrl+B   hide the sidebar         │
│                 ?   all keybindings          │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
│                                              │
└──────────────────────────────────────────────┘
 READ  Tab file tree  H/L history  f links
