tests/snapshots/render__welcome_tier_minimal.snap
---
source: tests/render.rs
expression: "frame(&app, width, height)"
---



















      terminal too small
          need 40x10
