tests/snapshots/render__welcome_tier_short.snap
---
source: tests/render.rs
expression: "frame(&app, width, height)"
---
 perga
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                            perga 0.1.0                                           │
│                                      Ctrl+O   find a document                                    │
│                                       Ctrl+B   toggle sidebar                                    │
│                                           ?   all keybindings                                    │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 READ
